# PinnacleCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libs.cpp
MetalExample/: MetalCppImpl.mm  MetalView.h  main.m  triangle.metal
MetalExample.xcodeproj/: project.pbxproj
MetalExample/SwiftUI/: ContentView.swift  MetalExampleApp.swift  MetalViewContainer.swift  PinnacleBridge.h  PinnacleCore-Bridging-Header.h
Modules/: CMakeLists.txt  README.md
Modules/Core/: CMakeLists.txt
Modules/Core/include/Core/: Camera.hpp  Math.hpp  Node.hpp  Scene.hpp
Modules/Core/src/: Material.mm  Mesh.mm  Texture.mm
Modules/Loaders/: CMakeLists.txt
Modules/Loaders/include/Loaders/: Model.hpp
Modules/Loaders/src/: AssimpLoader.mm  Model.mm
Modules/Renderer/: CMakeLists.txt
Modules/Renderer/include/Renderer/: Renderer.hpp
Modules/ShaderEditor/: CMakeLists.txt
Modules/ShaderEditor/include/ShaderEditor/: ShaderCompiler.hpp  ShaderEditor.hpp  ShaderLibrary.mm
Modules/ShaderEditor/src/: ShaderEditor.mm
Modules/Tools/: CMakeLists.txt
Modules/Tools/include/Tools/: AssetOptimizer.hpp  BatchConverter.hpp  MaterialFixer.hpp  ModelValidator.hpp  TextureManager.hpp
Modules/Tools/src/: AssetOptimizer.mm  ModelValidator.mm  TextureManager.mm
Modules/UI/: CMakeLists.txt
Modules/UI/include/UI/: CameraControlsBridge.h  EnvironmentControlsBridge.h  PinnacleBridge.h  SceneInspectorBridge.h  USDZExportBridge.h
Modules/UI/src/: CameraControlsBridge.mm  EnvironmentControlsBridge.mm  MetalView.swift  ModelValidatorView.swift  PinnacleBridge.mm  ShaderEditorView.swift  USDZExportBridge.mm
PinnacleCore.xcodeproj/: project.pbxproj
PinnacleCore.xcodeproj/xcuserdata/johncurley.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: PinnacleMetalImplementation.mm  PinnacleMetalRenderer.h  PinnacleMetalRendererInterface.h
src/Core/: Camera.hpp  Camera.mm  InputManager.hpp  InputManager.mm  Scene.hpp  Scene.mm
src/Renderer/: Renderer.hpp  Renderer.mm
src/Scene/: AssimpLoader.hpp  AssimpLoader.mm  Material.hpp  Material.mm  Mesh.hpp  Mesh.mm  Model.hpp  Model.mm  Node.hpp  Node.mm  Texture.hpp  Texture.mm
src/ShaderEditor/: README.md  ShaderCompiler.mm  ShaderEditorExample.hpp  ShaderEditorExample.mm  ShaderLibrary.hpp  ShaderSource.hpp  ShaderSource.mm
src/Shaders/: triangle.metal
src/SwiftUI/: AssetOptimizerBridge.h  AssetOptimizerView.swift  BatchConverterBridge.h  BatchConverterBridge.mm  BatchConverterView.swift  ContentView.swift  MaterialCreatorView.swift  MaterialFixerBridge.mm  MetalExampleApp.swift  MetalView.swift  ModelValidatorBridge.h  ModelValidatorView.swift  PinnacleBridge.h  PinnacleBridge.mm  SceneInspectorBridge.mm  SceneInspectorView.swift  ShaderEditorBridge.h  ShaderEditorBridge.mm  ShaderEditorViewModel.swift  TextureManagerBridge.h  TextureManagerView.swift
